--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -1,12 +1,12 @@
 <div fxLayoutAlign="center center" fxFlexFill class="main-div">
     <mat-card fxFlex="25">
         <mat-toolbar color="primary">Loging Page</mat-toolbar>
-        <form fxLayoutAlign="stretch" fxLayout="column" class="login-form">
+        <form (ngSubmit)="login()"  fxLayoutAlign="stretch" fxLayout="column" class="login-form">
             <mat-form-field>
-                <input matInput placeholder="Username" >
+                <input matInput placeholder="Username"  name="username">
             </mat-form-field>
             <mat-form-field>
-                <input matInput type="password" placeholder="Password" >
+                <input matInput type="password" placeholder="Password" name="password">
             </mat-form-field>
             <button mat-raised-button type="submit">Login</button>
         </form>
